# StranGhess

./: CMakeLists.txt  CMakePresets.json  Cursor.hpp  Desk.cpp  Desk.hpp  Game.cpp  Game.hpp  LICENCE.txt  Menu.cpp  Menu.hpp  MenuNode.cpp  MenuNode.hpp  MoveCode.hpp  NcursesSystemInput.cpp  NcursesSystemInput.hpp  NcursesSystemOutput.cpp  NcursesSystemOutput.hpp  Piece.cpp  Piece.hpp  PieceStats.cpp  PieceStats.hpp  README.md  SystemInterfaces.hpp  SystemOutputInterface.hpp  Vector2d.hpp  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
figures/: bishop.json  king.json  knight.json  pawn.json  placement.json  queen.json  rook.json
src/: Game.cpp  Menu.cpp  MoveCode.cpp  MoveCode.hpp  Piece.cpp  Piece.hpp  SystemInputInterface.hpp  SystemInterfaces.hpp  SystemOutputInterface.hpp  main.cpp
